Add Reset Settings Button

--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -36,7 +36,7 @@
   --constants-color: #EC6477;
   --math-operators-color: #BF94E4;
   --logical-operators-color: #BF94E4;
-  --separators-color: #D7DEEA;
+  --separators-color: #688199;
   --semicolons-color: #D7DEEA;
   --brackets-color: #F9D849;
   --matching-brackets-background-color: #223342;
