--- a/scripts/popup/popup.css
+++ b/scripts/popup/popup.css
@@ -179,6 +179,7 @@ body:has(.tab.active:nth-child(3)) #advanced-settings {
   align-items: center;
   background: var(--secondary-background-color);
   padding: 0px 5px;
+  border-radius: 7px;
 }
 
 .setting>* {
@@ -205,12 +206,43 @@ body:not(:has(#extension-activation-switch > .toggle-on)) .setting * {
 
 .normal {
   height: 25px;
-  border-radius: 7px;
 }
 
 .small {
   height: 20px;
-  border-radius: 7px;
+}
+
+.auto {
+  height: auto;
+}
+
+.middle {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.bottom {
+  margin-top: auto;
+}
+
+/* Message */
+.setting:has(.setting-message) {
+  background: inherit !important;
+}
+
+.setting-message {
+  font-style: italic;
+  color: var(--secondary-text-color) !important;
+  text-align: center;
+}
+
+/* Button */
+.setting:has(.setting-button) {
+  background: inherit !important;
+}
+
+.setting-button {
+  color: red;
 }
 
 /* Dropdown */
@@ -281,6 +313,51 @@ body:has(#extension-activation-switch > .toggle-on) .setting-switch .toggle-on .
 .dropdown.switch .setting-dropdown {
   text-align: right;
   color: var(--extension-popup-glow-color);
+}
+
+/* Reset Settings Button */
+#reset-settings-button {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid var(--dangerous-button-background-color);
+  border-radius: 7px;
+  box-sizing: border-box;
+  color: var(--dangerous-button-text-color);
+  cursor: pointer;
+  display: inline-block;
+  font-family: var(--code-font-family);
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  /* min-height: 30px; */
+  min-width: 0;
+  outline: none;
+  /* padding: 16px 24px; */
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  height: 100%;
+  will-change: transform;
+}
+
+#reset-settings-button:disabled {
+  pointer-events: none;
+}
+
+#reset-settings-button:hover {
+  color: #ffffff;
+  background-color: var(--dangerous-button-background-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+#reset-settings-button:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
 
 
