--- a/scripts/utilities/variables.css
+++ b/scripts/utilities/variables.css
@@ -7,6 +7,7 @@
   --primary-text-color: #E5E2DC;
   --secondary-text-color: #C5C2BC;
   --tertiary-text-color: #93918C;
+
   --placeholder-color: #8E9AB6;
   --error-text-color: #F22C3E;
 
@@ -38,7 +39,7 @@
   --constants-color: #EC6477;
   --math-operators-color: #BF94E4;
   --logical-operators-color: #BF94E4;
-  --separators-color: #D7DEEA;
+  --separators-color: #688199;
   --semicolons-color: #D7DEEA;
   --brackets-color: #F9D849;
   --matching-brackets-background-color: #223342;
@@ -70,6 +71,9 @@
   --extension-popup-switch-on-primary-shadow-color: #4B7A8D;
   --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
   --extension-popup-switch-on-text-color: #3B6A7D;
+
+  --dangerous-button-text-color: #ff2335;
+  --dangerous-button-background-color: #ff2335;
 
   /* --- Other --- */
 
