--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -8,12 +8,20 @@
   --placeholder-color: #8E9AB6;
   --error-text-color: #F22C3E;
 
+  --editor-header-text-color: #E5E2DC;
+  --editor-footer-text-color: #506377;
+
   /* Backgrounds */
   --primary-background-color: #061626;
   --secondary-background-color: #05131F;
   --tertiary-background-color: #122438;
   --quaternary-background-color: #475C70;
-  --header-footer-border-color: #192C40;
+
+  --editor-header-background-color: #061626;
+  --editor-header-border-color: #05131F;
+  --editor-header-shadow-color: #05131F;
+  --editor-footer-background-color: #061626;
+  --editor-footer-border-color: #192C40;
 
   /* Editor */
   --cursor-color: #8AA6C3;
@@ -51,13 +59,29 @@
   --save-arguments-button-hover-color: #314458;
   --save-arguments-button-press-color: #506377;
 
+  --safe-button-normal-color: #00B200;
+  --safe-button-hover-color: #019101;
+  --safe-button-press-color: #006E00;
+
   --dangerous-button-normal-color: #E53343;
   --dangerous-button-hover-color: #CD1222;
   --dangerous-button-press-color: #9E0E1A;
 
-  --safe-button-normal-color: #00B200;
-  --safe-button-hover-color: #019101;
-  --safe-button-press-color: #006E00;
+  /* --general-button-normal-gradient: none;
+  --general-button-hover-gradient: none;
+  --general-button-press-gradient: none;
+
+  --save-arguments-button-normal-gradient: none;
+  --save-arguments-button-hover-gradient: none;
+  --save-arguments-button-press-gradient: none;
+
+  --safe-button-normal-gradient: none;
+  --safe-button-hover-gradient: none;
+  --safe-button-press-gradient: none;
+
+  --dangerous-button-normal-gradient: none;
+  --dangerous-button-hover-gradient: none;
+  --dangerous-button-press-gradient: none; */
 
   /* Extension Pupup */
   --extension-popup-glow-color: #89C2DA;
@@ -68,6 +92,9 @@
   --extension-popup-switch-on-primary-shadow-color: #4B7A8D;
   --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
   --extension-popup-switch-on-text-color: #3B6A7D;
+
+  --dangerous-button-text-color: #ff2335;
+  --dangerous-button-background-color: #ff2335;
 
   /* Others */
   --is-dark-theme: 1;
