--- a/scripts/utilities/variables.css
+++ b/scripts/utilities/variables.css
@@ -39,7 +39,7 @@
   --constants-color: #EC6477;
   --math-operators-color: #BF94E4;
   --logical-operators-color: #BF94E4;
-  --separators-color: #688199;
+  --separators-color: #D7DEEA;
   --semicolons-color: #D7DEEA;
   --brackets-color: #F9D849;
   --matching-brackets-background-color: #223342;
@@ -112,18 +112,9 @@
 
 /* -------------------------- Fonts -------------------------- */
 
-/* Icons */
-
-@font-face {
-  font-family: 'Icons';
-  font-style: normal;
-  font-weight: normal;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/icons.woff2') format('woff2');
-}
-
 /* JetBrains Mono */
 
-/* Normal Fonts */
+/* Normal */
 @font-face {
   font-family: 'JetBrains Mono';
   font-style: normal;
@@ -180,7 +171,7 @@
   src: url('chrome-extension://__MSG_@@extension_id__/fonts/JetBrainsMono-ExtraBold.woff2') format('woff2');
 }
 
-/* Italic Fonts */
+/* Italic */
 @font-face {
   font-family: 'JetBrains Mono';
   font-style: italic;
@@ -239,7 +230,7 @@
 
 /* JetBrains Mono NL */
 
-/* Normal Fonts */
+/* Normal */
 @font-face {
   font-family: 'JetBrains Mono NL';
   font-style: normal;
@@ -296,7 +287,7 @@
   src: url('chrome-extension://__MSG_@@extension_id__/fonts/JetBrainsMonoNL-ExtraBold.woff2') format('woff2');
 }
 
-/* Italic Fonts */
+/* Italic */
 @font-face {
   font-family: 'JetBrains Mono NL';
   font-style: italic;
@@ -351,4 +342,120 @@
   font-style: italic;
   font-weight: 800;
   src: url('chrome-extension://__MSG_@@extension_id__/fonts/JetBrainsMonoNL-ExtraBoldItalic.woff2') format('woff2');
+}
+
+/* Source Code Pro */
+
+/* Normal */
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 200;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-ExtraLight.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 300;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 500;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 800;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-ExtraBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 900;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Black.woff2') format('woff2');
+}
+
+/* Italic */
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 200;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-ExtraLightItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 300;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-LightItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 400;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-Italic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 500;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-MediumItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 600;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-SemiBoldItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 700;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-BoldItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 800;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-ExtraBoldItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: italic;
+  font-weight: 900;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SourceCodePro-BlackItalic.woff2') format('woff2');
 }
